# frona

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.dev  LICENSE  README.md  docker-compose.yml  mise.toml
crates/frona-browser/: Cargo.toml
crates/frona-browser/src/: connection.rs  error.rs
crates/frona-browser/tests/: integration.rs
crates/frona-cli-mcp/: Cargo.toml
crates/frona-cli-mcp/src/: cli.rs  client.rs  main.rs
crates/frona-server/: Cargo.toml  build.rs
crates/frona-server/src/: lib.rs  main.rs
crates/frona-server/src/agent/: execution.rs  harness.rs  mod.rs  models.rs  prompt.rs  repository.rs  service.rs  workspace.rs
crates/frona-server/src/api/: error.rs
crates/frona-server/src/app/: manager.rs  mod.rs  models.rs  repository.rs  service.rs  supervisor.rs
crates/frona-server/src/auth/: ephemeral_token.rs  jwt.rs  mod.rs  models.rs  user_service.rs
crates/frona-server/src/call/: models.rs  repository.rs  service.rs
crates/frona-server/src/chat/: broadcast.rs  mod.rs  models.rs  repository.rs  service.rs  session.rs  slash.rs
crates/frona-server/src/contact/: models.rs  repository.rs  service.rs
crates/frona-server/src/core/: config.rs  event_bus.rs  handle.rs  metadata.rs  metrics.rs  mod.rs  principal.rs  repository.rs  state.rs  template.rs
crates/frona-server/src/credential/: key_rotation.rs  mod.rs  presign.rs
crates/frona-server/src/db/: init.rs
crates/frona-server/src/inference/: config.rs  context.rs  conversation.rs  error.rs  hitl.rs  hooks.rs  mod.rs  provider.rs  registry.rs  request.rs  retry.rs  tool_call.rs  tool_loop.rs
crates/frona-server/src/memory/: models.rs  repository.rs  service.rs
crates/frona-server/src/notification/: models.rs  repository.rs  service.rs
crates/frona-server/src/policy/: mod.rs  models.rs  reconcile.rs  repository.rs  sandbox.rs  schema.rs  service.rs  validation.rs
crates/frona-server/src/scheduler/: mod.rs
crates/frona-server/src/space/: models.rs  repository.rs  service.rs
crates/frona-server/src/storage/: models.rs  path.rs  service.rs  workspace.rs
crates/frona-server/src/tool/: annotate.rs  cli.rs  create_agent.rs  manage_app.rs  manage_policy.rs  manage_service.rs  manager.rs  memory.rs  mod.rs  notify_human.rs  produce_file.rs  provider.rs  registry.rs  report_signal.rs  request_credentials.rs  send_message.rs  task.rs  task_control.rs  update_identity.rs  (+3 more)
crates/frona-server/tests/: agent_repo.rs  app_repo.rs  auth_principal_extractor.rs  auth_test.rs  cas_resume_query.rs  channel_delivery_repo.rs  chat_repo.rs  config_api.rs  conversation_builder.rs  cron_run_matrix.rs  db_lock_test.rs  ephemeral_token_injection.rs  inbound_dispatcher_e2e.rs  inference_test.rs  key_rotation.rs  mcp_client.rs  mcp_e2e.rs  mcp_server_repo.rs  mcp_service_lifecycle.rs  mcp_supervisor.rs  memory_entry_repo.rs  memory_service.rs  migration_rename_vault_grant.rs  oauth_test.rs  policy_sandbox_e2e.rs  policy_service.rs  presign_test.rs  sandbox_landlock.rs  scheduler.rs  scheduler_cron_e2e.rs  scheduling_timezone_e2e.rs  send_message_gating_e2e.rs  send_message_resolve.rs  signal_repo.rs  signal_service_e2e.rs  surreal_null.rs  switch_agent_e2e.rs  task_broadcast_centralized.rs  task_cron.rs  task_executor.rs  (+9 more)
crates/frona-text/: Cargo.toml
crates/frona-text/src/: lib.rs  line_ending.rs  normalized_string.rs  search.rs
engine/: Cargo.toml
engine/config/prompts/: CHAT_COMPACTION.md  HEARTBEAT_TASK.md  IDENTITY.md  INSIGHT_COMPACTION.md  MEMORY.md  ROUTINE.md  SCHEDULED_TASK.md  SCHEDULING.md  SPACE_COMPACTION.md  TITLE.md  TOOLS.md  WORKSPACE.md
engine/derive/: Cargo.toml
engine/derive/src/: lib.rs  migration.rs
engine/src/: lib.rs  main.rs
engine/src/agent/: dto.rs  execution.rs  mod.rs  models.rs  prompt.rs  repository.rs  service.rs  workspace.rs
engine/src/api/: config.rs  cookie.rs  db.rs  error.rs  files.rs  mod.rs  state.rs
engine/src/app/: manager.rs  mod.rs  models.rs  service.rs  supervisor.rs
engine/src/auth/: dto.rs  jwt.rs  lockout.rs  mod.rs  models.rs
engine/src/call/: mod.rs  service.rs
engine/src/chat/: broadcast.rs  dto.rs  mod.rs  models.rs  repository.rs  service.rs  session.rs
engine/src/contact/: mod.rs  service.rs
engine/src/core/: config.rs  error.rs  metrics.rs  mod.rs  repository.rs  shutdown.rs  state.rs  supervisor.rs
engine/src/credential/: models.rs  presign.rs  repository.rs  service.rs
engine/src/db/: init.rs  mod.rs
engine/src/inference/: config.rs  conversation.rs  convert.rs  error.rs  fallback.rs  mod.rs  provider.rs  registry.rs  request.rs  retry.rs  tool_call.rs  tool_execution.rs  tool_loop.rs
engine/src/llm/: context.rs  convert.rs  error.rs  fallback.rs  provider.rs  registry.rs  tool_loop.rs
engine/src/memory/: mod.rs  models.rs  repository.rs  service.rs
engine/src/notification/: models.rs
engine/src/schedule/: models.rs  repository.rs  service.rs
engine/src/scheduler/: mod.rs
engine/src/space/: mod.rs  service.rs
engine/src/storage/: content.rs  mod.rs  models.rs  service.rs  workspace.rs
engine/src/tool/: cli.rs  delegate.rs  heartbeat.rs  manage_service.rs  mod.rs  notify_human.rs  produce_file.rs  provider.rs  read_file.rs  registry.rs  remember.rs  request_credentials.rs  routine.rs  schedule.rs  send_message.rs  skill.rs  task_control.rs  time.rs  update_entity.rs  update_identity.rs  voice.rs  web_fetch.rs  web_search.rs
engine/tests/: agent_repo.rs  app_repo.rs  auth_test.rs  chat_repo.rs  config_api.rs  conversation_builder.rs  db_lock_test.rs  inference_test.rs  insight_repo.rs  mcp_e2e.rs  mcp_server_repo.rs  mcp_service_lifecycle.rs  mcp_supervisor.rs  memory_service.rs  oauth_test.rs  presign_test.rs  sandbox_landlock.rs  schedule_service.rs  scheduler.rs  send_message_resolve.rs  surreal_null.rs  task_cron.rs  task_executor.rs  task_sse.rs  tool_call_repo.rs  tool_execution_repo.rs  user_repo.rs  voice_routes.rs  workspace_venv.rs
engine/tests/api/: apps.rs  auth.rs  contacts.rs  mcp.rs  messages.rs  misc.rs  mod.rs  security.rs  system.rs  vaults.rs
engine/tests/helpers/: mod.rs
(+631 files in other folders)
