[package]
name = "frona"
edition.workspace = true
version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
jsonwebtoken = "9"
argon2 = "0.5"
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }
rand = "0.8"
aes-gcm = "0.10"
sha2 = "0.10"
openidconnect = "4"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "http2", "multipart"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "set-header"] }
tower_governor = "0.8"
surrealdb = { version = "3.0.0", features = ["kv-rocksdb"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
frona-derive = { path = "derive" }
rig-core = { workspace = true }
async-stream = { workspace = true }
serde-aux = { workspace = true }
base64 = { workspace = true }
serde_yaml = "0.9"
config = { version = "0.14", features = ["yaml"] }
include_dir = "0.7"
browser-use = { version = "0.2", default-features = false }
tokio-util = "0.7"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
backon = { workspace = true }
cron = "0.15"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"

[dev-dependencies]
surrealdb = { version = "3.0.0", features = ["kv-mem"] }
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
