[package]
name = "frona-browser"
edition.workspace = true
version.workspace = true

[lib]
name = "frona_browser"
path = "src/lib.rs"

[dependencies]
chromiumoxide = { version = "0.9", default-features = false, features = ["bytes"] }
html2md = "0.2"
tokio = { workspace = true }
futures = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
similar = "2"
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
