[package]
name = "frona-cli-mcp"
edition.workspace = true
version.workspace = true

[[bin]]
name = "mcpctl"
path = "src/main.rs"

[dependencies]
frona-api-types = { path = "../frona-api-types" }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt", "macros"] }
